--- a/templates/index.html
+++ b/templates/index.html
@@ -83,7 +83,7 @@ body
         <input type="number" name="ct"  size="60"  style="height:20px; width:300px;" required><br>
         <button type="submit" class="button">PREDICT</button>
     </form>
-    <h2><strong>RESULTS</strong></h2>
+    <h2><strong>RESULTS</strong> (Scroll down after clicking PREDICT to see the results)</h2>
     <div id="pred" style="font-size:30px;color :navy"><left><strong>{{prediction_text}}</strong></left></div>
     <br>
 </div>
